provisionning/k3s/tls/pods/whoami/service.yml
kind: Service
apiVersion: v1
metadata:
  name: whoami
  namespace: default
spec:
  ports:
  - port: 80
    name: http
    protocol: TCP
  selector:
    app: whoami
