provisionning/k3s/tls/pods/whoami/ingressroute.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-tls
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: Host(`demo1.tferdinand.net`) && PathPrefix(`/`)
    services:
    - name: whoami
      port: 80
    middlewares:
      - name: securityheaders
  tls:
    certResolver: le
    options:
      name: tlsoptions
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  namespace: default
spec:
  entryPoints:
    - web
  routes:
  - kind: Rule
    match: Host(`demo1.tferdinand.net`) && PathPrefix(`/`)
    services:
    - name: whoami
      port: 80
    middlewares:
      - name: securityheaders
      - name: redirecthttps
